BANKVAULT/deploy.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: example1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://18.212.236.56:8200" # optional, the address of the Vault service, default values is https://vault:8200
        vault.security.banzaicloud.io/vault-role: "example1" # optional, the default value is the name of the ServiceAccount the Pod runs in, in case of Secrets and ConfigMaps it is "default"
        vault.security.banzaicloud.io/vault-skip-verify: "true" # optional, skip TLS verification of the Vault server certificate
        # vault.security.banzaicloud.io/vault-tls-secret: "vault-tls" # optional, the name of the Secret where the Vault CA cert is, if not defined it is not mounted
        vault.security.banzaicloud.io/vault-agent: "false" # optional, if true, a Vault Agent will be started to do Vault authentication, by default not needed and vault-env will do Kubernetes Service Account based Vault authentication
        vault.security.banzaicloud.io/vault-path: "kubernetes-example1/" # optional, the Kubernetes Auth mount path in Vault the default value is "kubernetes"
        vault.security.banzaicloud.io/vault-env-from-path: "secret/data/k8s/example1/test-secret"

    spec:
      serviceAccountName: vault-auth #

      # initContainers:
      # - name: init-ubuntu
      #   image: ubuntu
      #   command: ["sh", "-c", "echo env: $NAME && echo initContainers ready"]
      containers:
      - name: alpine2
        image: alpine 
        command: ["sh", "-c", "echo $name && echo $name && echo going to sleep... && sleep 10000"]
